@@ -9,22 +9,6 @@
       class=".geoshapeform.manageCoordinates"
       permission = "cmf.ModifyPortalContent" />
 
-  <adapter
-      for="collective.geo.mapwidget.interfaces.IMapView
-           zope.interface.Interface
-           zope.interface.Interface"
-      factory=".geoshapeform.ShapeMapWidget"
-      name="geoshapemap" />
-
-    <adapter
-        for="collective.geo.mapwidget.interfaces.IMapView
-             zope.interface.Interface
-             zope.interface.Interface
-             collective.geo.mapwidget.interfaces.IMapWidget"
-        factory=".geoshapeform.ShapeEditLayer"
-        name="shapeedit"
-        />
-
     <adapter
       for ="*
             zope.publisher.interfaces.http.IHTTPRequest
